--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Bonnie
-bio: 'DNN workshop'
+bio: 'Bonnie's test blog'
 
 # if it's an external image, update below for true
 external-image: false
